src/objects/LBI__Model__c.object
<CustomObject>
    <fields>
        <fullName>LBI__AccountRatingFieldName__c</fullName>
        <label>Account Rating Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__AccountScoreDateFieldName__c</fullName>
        <label>Account Score Date Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__AccountScoreFieldName__c</fullName>
        <label>Account Score Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ContactRatingFieldName__c</fullName>
        <label>Contact Rating Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ContactScoreDateFieldName__c</fullName>
        <label>Contact Score Date Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ContactScoreFieldName__c</fullName>
        <label>Contact Score Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Models</relationshipLabel>
        <relationshipName>LatticeModels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeModelID__c</fullName>
        <externalId>true</externalId>
        <label>Lattice Model ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__LeadRatingFieldName__c</fullName>
        <label>Lead Rating Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LeadScoreDateFieldName__c</fullName>
        <label>Lead Score Date Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LeadScoreFieldName__c</fullName>
        <label>Lead Score Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ModelName__c</fullName>
        <label>Model Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoredInSFDC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Scored In SFDC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TargetAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__TargetContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__TargetLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Model</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__ModelName__c</columns>
        <columns>LBI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Lattice Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>